--- a/example.yaml
+++ b/example.yaml
@@ -11,7 +11,7 @@ kafka:
 mysql:
   schemas:
     store-records:
-      names:
+      databases:
           - store_records_tycoon
           - store_records_initech
       tables:
